--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Agor Playground (Recommended - Fast npm install)",
-  // Cache bust: 2025-11-04-v7 - Version 0.6.10 - Fix double session save and clean console logs
+  // Cache bust: 2025-11-04-v7 - Version 0.6.11rc1
   "build": {
     "dockerfile": "playground/Dockerfile",
     "context": ".."
