feat: Complete PostgreSQL support with unified query API (#252)
* feat: Add comprehensive PostgreSQL support with SQLite compatibility

Implements full PostgreSQL support while maintaining 100% backward compatibility
with SQLite. Agor now supports both databases with zero code changes required.

**Dual Schema Strategy**
- SQLite schema: packages/core/src/db/schema.sqlite.ts
- PostgreSQL schema: packages/core/src/db/schema.postgres.ts
- Shared type factory: packages/core/src/db/schema-factory.ts
- Single source of truth for schema definitions

**Database Wrapper**
- Unified query API across SQLite (LibSQL) and PostgreSQL
- Type-safe wrappers: select(), insert(), update(), deleteFrom()
- Automatic dialect detection and proper result handling
- Database-agnostic JSON extraction helper (jsonExtract)

**Migration System**
- Dual migration files: migrations/*.sqlite.sql, migrations/*.postgres.sql
- Automatic schema creation (drizzle schema for PostgreSQL)
- CLI auto-detects database type and applies correct migrations

**1. Transparent Dialect Switching**
- Auto-detect from DATABASE_URL (postgresql://, postgres://, file:, libsql://)
- Explicit control via AGOR_DB_DIALECT environment variable
- Fallback to SQLite by default

**2. Docker Compose Profiles**
- Default: SQLite mode (docker compose up)
- PostgreSQL: docker compose --profile postgres up
- Gated DATABASE_URL usage prevents connection errors

**3. CLI PostgreSQL Support**
- All commands work with both databases
- Automatic DATABASE_URL detection
- Correct schema targeting (drizzle.__drizzle_migrations)

**4. Type Safety**
- Branded type IDs remain consistent across dialects
- Timestamp handling: Date objects work for both
- JSON columns: text mode (SQLite) vs jsonb (PostgreSQL)

**Database Compatibility Layer** (packages/core/src/db/database-wrapper.ts)
- Wraps Drizzle queries with .run()/.one()/.all() terminators
- Handles LibSQL vs postgres-js result format differences
- SQLite DELETE: { changes: number }
- Post

--- a/apps/agor-daemon/package.json
+++ b/apps/agor-daemon/package.json
@@ -6,8 +6,8 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsup",
-    "dev": "concurrently -k -n core,daemon -c cyan,green \"pnpm --filter @agor/core dev\" \"./node_modules/.bin/tsx watch --clear-screen=false --ignore 'node_modules/**' src/index.ts ../../packages/core/dist\"",
-    "dev:daemon-only": "tsx watch --clear-screen=false --ignore 'node_modules/**' src/index.ts ../../packages/core/dist",
+    "dev": "concurrently -k -n core,daemon -c cyan,green \"pnpm --filter @agor/core dev\" \"./node_modules/.bin/tsx watch --clear-screen=false --ignore 'node_modules/**' src/index.ts\"",
+    "dev:daemon-only": "tsx watch --clear-screen=false --ignore 'node_modules/**' src/index.ts",
     "start": "node dist/index.js",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
